backend: added user response for auth route and added new endpoint to get class by school
